--- a/IDP/IDP_manual.html
+++ b/IDP/IDP_manual.html
@@ -149,7 +149,7 @@
     </p>
     <br>
     <p>Using long reads corrected by LSC first is advised.<br>
-        <b><font color = "red">Please see our <a href="http://www-stage.healthcare.uiowa.edu/labs/au/IDP/IDP_long_read_file_guide.html">guide on creating a long read set</a>.</font color></b><br>
+        <b><font color = "red">Please see our <a href="http://www.augroup.org/IDP/IDP_long_read_file_guide.html">guide on creating a long read set</a>.</font color></b><br>
 
 The reason is that corrected.fa will lose some flanking sequences on
 the long reads that were not corrected by short reads, and there still
@@ -227,7 +227,7 @@ SR_sam_pathfilename = /home/kinfai/3seq/IDP_0.1/test_data/good_hits.sam
     <li><i>isoform.gpd</i></li>
     
     <dd> This file contains all gene isoforms identified from detection or prediction. There are overlap between detection and prediction, so isoform.gpd removes the redundant ones. 
-	It is in <a href="http://www.healthcare.uiowa.edu/labs/au/IDP/IDP_gpd_format.html">gpd format</a>. 
+	It is in <a href="http://www.augroup.org/IDP/IDP_gpd_format.html">gpd format</a>. 
 	  </dd>
 	  </ul>
 	  
@@ -241,7 +241,7 @@ SR_sam_pathfilename = /home/kinfai/3seq/IDP_0.1/test_data/good_hits.sam
 	 <ul>
     <li><i>isoform_detection.gpd</i></li> 
 	<dd> This file contains the detections of gene isoforms annotated in the reference annotation (ref_annotation_pathfilename in run.cfg). 
-	It is in <a href="http://www.healthcare.uiowa.edu/labs/au/IDP/IDP_gpd_format.html">gpd format</a>. 
+	It is in <a href="http://www.augroup.org/IDP/IDP_gpd_format.html">gpd format</a>. 
 	</dd>
 	  
 	</ul>  
@@ -300,41 +300,42 @@ SR_sam_pathfilename = /home/kinfai/3seq/IDP_0.1/test_data/good_hits.sam
       <li><a href="IDP_download_current.html"><img src="images/download.png"> IDP 0.1.9</a> (<a href="IDP_download_current.html#notes">notes</a>)</li>
     </ul>
 
-        <h2>Useful links</h2>
+       <h2>Useful links</h2>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/">Au Lab</a> - Au Lab homepage </li>
+      <li><a href="http://www.augroup.org">Au Lab</a> - Au Lab homepage </li>
     </ul>
     <ul>
       <li><a href="http://www.stanford.edu/group/wonglab/SpliceMap/">SpliceMap</a> - Novel splice junction discovery</li>
     </ul>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/LSC/">LSC</a> - Error correction of PacBio long reads </li>
+      <li><a href="http://www.augroup.org/LSC/LSC">LSC</a> - Error correction of PacBio long reads </li>
     </ul>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/IDP/">IDP</a> - Isoform Detection and Prediction  </li>
+      <li><a href="http://www.augroup.org/IDP/IDP">IDP</a> - Isoform Detection and Prediction  </li>
     </ul>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/IDP-ASE/">IDP-ASE</a> - Determine haplotypes and quantify allele specific expression  </li>
+      <li><a href="http://www.augroup.org/IDP-ASE/IDP-ASE">IDP-ASE</a> - Determine haplotypes and quantify allele specific expression  </li>
     </ul>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/IDP-fusion/">IDP-Fusion</a> - Isoform Detection and Prediction across fusion genes  </li>
+      <li><a href="http://www.augroup.org/IDP-fusion/IDP-fusion">IDP-Fusion</a> - Isoform Detection and Prediction across fusion genes  </li>
     </ul>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/IDP/hESC.html">hESC transcriptome</a> - hESC transcriptome by IDP </li>
+      <li><a href="http://www.augroup.org/IDP/hESC.html">hESC transcriptome</a> - hESC transcriptome by IDP </li>
     </ul>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/AlignQC/">AlignQC</a> - Check an alignment, assess error patterns, and make reports </li>
+      <li><a href="http://www.augroup.org/AlignQC/alignqc">AlignQC</a> - Check an alignment, assess error patterns, and make reports </li>
     </ul>
    
 
 <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/IDP-denovo/">IDP-denovo</a> - <i>de novo</i> transcriptome assembly and annotation</li>
+      <li><a href="http://www.augroup.org/IDP-denovo.20160829/idp-denovo">IDP-denovo</a> - <i>de novo</i> transcriptome assembly and annotation</li>
     </ul>
 
 
 <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/GenoClone/">GenoClone</a> - Reveal tumor heterogeneity</li>
+      <li><a href="http://www.augroup.org/GenoClone/GenoClone/GenoClone">GenoClone</a> - Reveal tumor heterogeneity</li>
     </ul>
+
 
 
  <ul>
@@ -348,10 +349,11 @@ SR_sam_pathfilename = /home/kinfai/3seq/IDP_0.1/test_data/good_hits.sam
 
 <div id="footer">
     <ul>
-      <li>&copy; <a href=" http://www.healthcare.uiowa.edu/labs/au/">Kin Fai Au</a>.  All Rights Reserved.</li>
-      <li><a href=" http://www.uiowa.edu/">University of Iowa</a>, IA 52242.</li>
+      <li>&copy; <a href=" http://www.augroup.org">Kin Fai Au</a>. All Rights Reserved.</li>
+      <li><a href="https://www.osu.edu/">The Ohio State University</a>, OH 43210.</li>
     </ul>
 </div>
+  
 
 
 <!-- end #content -->
