--- a/IDP/hESC.html
+++ b/IDP/hESC.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8">
         <meta http-equiv="refresh" content="1;url=http://www.healthcare.uiowa.edu/labs/au/IDP/hESC.asp">
         <script type="text/javascript">
-            window.location.href = "http://www.healthcare.uiowa.edu/labs/au/IDP/hESC.asp"
+            window.location.href = "http://augroup.org/IDP/hESC.asp"
         </script>
         <title>Page Redirection</title>
     </head>
     <body>
-        If you are not redirected automatically, follow the <a href='http://www.healthcare.uiowa.edu/labs/au/IDP/hESC.asp'>link to example</a>
+        If you are not redirected automatically, follow the <a href='http://www.augroup.org/IDP/hESC.asp'>link to example</a>
     </body>
 </html>
