--- a/IDP/hESC_long_read_file_guide.html
+++ b/IDP/hESC_long_read_file_guide.html
@@ -17,7 +17,7 @@
 <div id="top_navbar">
   <!-- OPTIONAL TOP NAVIGATION OR TEXT AREA INSIDE RED BAR; BAR EXPANDS HEIGHT AUTOMATICALLY TO ACCOMMODATE CONTENT -->
    <ul>
-    <li>This hESC transcriptome iS identified by <a href="http://www.stanford.edu/group/wonglab/SpliceMap/">SpliceMap</a>-<a href="http://www.healthcare.uiowa.edu/labs/au/LSC/">LSC</a>-<a href="http://www.healthcare.uiowa.edu/labs/au/IDP/">IDP</a> pipeline</li>
+    <li>This hESC transcriptome iS identified by <a href="http://www.stanford.edu/group/wonglab/SpliceMap/">SpliceMap</a>-<a href="http://www.augroup.org/LSC/">LSC</a>-<a href="http://www.augroup.org/IDP/">IDP</a> pipeline</li>
   </ul>
   <!-- END OF OPTIONAL TOP RED BAR CONTENT -->
 </div>
@@ -33,7 +33,7 @@
     <div id="page_title_leftcontent">
       <h1>hESC transcriptome</h1>
       <ul>
-        <li>This Human Embryonic Stem Cell <br>(hESC, H1 cell line) <br>transcriptome is identified by <a href="http://www.stanford.edu/group/wonglab/SpliceMap/"><b>SpliceMap</b></a>-<a href="http://www.healthcare.uiowa.edu/labs/au/LSC/"><b>LSC</b></a>-<a href="http://www.healthcare.uiowa.edu/labs/au/IDP/"><b>IDP</b></a> pipeline<br>
+        <li>This Human Embryonic Stem Cell <br>(hESC, H1 cell line) <br>transcriptome is identified by <a href="http://www.stanford.edu/group/wonglab/SpliceMap/"><b>SpliceMap</b></a>-<a href="http://www.augroup.org/LSC/"><b>LSC</b></a>-<a href="http://www.augroup.org/IDP/"><b>IDP</b></a> pipeline<br>
 
       </ul>
     </div>
@@ -132,19 +132,19 @@
 
     <h2>Useful links</h2>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/">Au Lab</a> - Au Lab homepage </li>
+      <li><a href="http://www.augroup.org/">Au Lab</a> - Au Lab homepage </li>
     </ul>
     <ul>
       <li><a href="http://www.stanford.edu/group/wonglab/SpliceMap/">SpliceMap</a> - Novel splice junction discovery</li>
     </ul>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/LSC/LSC.html">LSC</a> - Error correction of PacBio long reads </li>
+      <li><a href="http://www.augroup.org/LSC/LSC.html">LSC</a> - Error correction of PacBio long reads </li>
     </ul>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/IDP/">IDP</a> - Isoform Detection and Prediction  </li>
+      <li><a href="http://www.augroup.org/IDP/">IDP</a> - Isoform Detection and Prediction  </li>
     </ul>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/IDP/hESC.asp">hESC transcriptome</a> - hESC transcriptome by IDP </li>
+      <li><a href="http://www.augroup.org/IDP/hESC.asp">hESC transcriptome</a> - hESC transcriptome by IDP </li>
     </ul>
 
 
@@ -153,12 +153,10 @@
   </div>
 
 
-
-
 <div id="footer">
     <ul>
-      <li>&copy; <a href=" http://www.healthcare.uiowa.edu/labs/au/index.asp">Kin Fai Au</a>. All Rights Reserved.</li>
-      <li><a href=" http://www.uiowa.edu/">University of Iowa</a>, IA 52242.</li>
+      <li>&copy; <a href=" http://www.augroup.org">Kin Fai Au</a>. All Rights Reserved.</li>
+      <li><a href="https://www.osu.edu/">The Ohio State University</a>, OH 43210.</li>
     </ul>
 </div>
   
