--- a/IDP/IDP_download_current.html
+++ b/IDP/IDP_download_current.html
@@ -99,10 +99,10 @@
     <li> One input of IDP is the short-read RNA-seq results: junctions (bed file) AND alignments of short reads (sam file). 
 	<br> Most RNA-seq tools, such as <a href="http://www.stanford.edu/group/wonglab/SpliceMap/">SpliceMap</a> and Tophat can output these two files.</li>
     <li> The other input is the long reads: raw sequences (FASTA file) OR alignment of long reads (PSL file by BLAT or <a href="IDP_gpd_format.html">GPD file</a>)
-	<br> The error-corrected long reads from PacBio data is perferred. <a href="http://www.augroup/LSC/LSC/">LSC</a> is our default error-correction tool. </li>
+	<br> The error-corrected long reads from PacBio data is perferred. <a href="http://www.augroup.org/LSC/LSC/">LSC</a> is our default error-correction tool. </li>
 	
 	<li> The IDP output are the gene isoform identifications and quantification of genes and gene isoforms. <a href="hESC.html"> hESC transcriptome (H1 cell line)</a> is the first one identified by this methods. 
-	For more details of this transcriptome, please see its homepage <a href="hESC.html"> <b>http://www.augroup.org/IDP/hESC.asp</b> </a> and our paper <b> Characterization of the human ESC transcriptome by hybrid sequencing </b>[<a href="http://www.augroup.org/IDP/IDP.pdf">preprint</a>].
+	For more details of this transcriptome, please see its homepage <a href="hESC.html"> <b>http://www.augroup.org/IDP/hESC.html</b> </a> and our paper <b> Characterization of the human ESC transcriptome by hybrid sequencing </b>[<a href="http://www.augroup.org/IDP/IDP.pdf">preprint</a>].
   </ul>
     <h3>Changes in version 0.1.9<br></h3>
 <ul>
