--- a/IDP/IDP.html
+++ b/IDP/IDP.html
@@ -170,7 +170,7 @@ redundancies will be handled by IDP.</p>
    <h3><img src="images/dna.png"> 11-26-2013: Hompage of hESC transcriptome identified by SpliceMap-LSC-IDP pipline is released.</h3>
 
    The homepage of <a href="hESC.html"> hESC transcriptome (H1 cell line)</a> is released. You can also find novel genes, novel isoforms of existing genes (including pluripency markers) and novel ncRNA in this website: <br>
-   <center><a href="hESC.html"> <b>http://www.healthcare.uiowa.edu/labs/au/IDP/hESC.asp</b> </a> </center><br>
+   <center><a href="hESC.html"> <b>http://www.augroup.org/IDP/hESC.asp</b> </a> </center><br>
    The details of this hESC transcriptome can be in our publication:
    <b> Characterization of the human ESC transcriptome by hybrid sequencing </b>[<a href="http://www.augroup.org/IDP/IDP.pdf">preprint</a>]
     </p>
@@ -261,7 +261,7 @@ redundancies will be handled by IDP.</p>
     </ul>
 
 
-    <br><ul><center><img src="images/seal.gif" width="75%" hight="75%"><center></ul>
+    <br><ul><center><img src="images/seal.jpg" width="75%" hight="75%"><center></ul>
   </div>
 
 
