--- a/IDP/IDP_long_read_file_guide.html
+++ b/IDP/IDP_long_read_file_guide.html
@@ -171,13 +171,8 @@
       <li><a href="http://www.augroup.org/IDP/hESC.asp">hESC transcriptome</a> - hESC transcriptome by IDP </li>
     </ul>
 
-    <br><ul><center><img src="images/seal.gif" width="75%" hight="75%"><center></ul>
+    <br><ul><center><img src="images/seal.jpg" width="75%" hight="75%"><center></ul>
   </div>
-
-  
-
-
-
 
 
 <div id="footer">
