--- a/IDP/IDP_manual.html
+++ b/IDP/IDP_manual.html
@@ -343,7 +343,7 @@ SR_sam_pathfilename = /home/kinfai/3seq/IDP_0.1/test_data/good_hits.sam
     </ul>
 
 
-    <br><ul><center><img src="images/seal.gif" width="75%" hight="75%"><center></ul>
+    <br><ul><center><img src="images/seal.jpg" width="75%" hight="75%"><center></ul>
   </div>
 
 
