--- a/IDP/IDP_tutorial.html
+++ b/IDP/IDP_tutorial.html
@@ -313,7 +313,7 @@
     </ul>
 
 
-    <br><ul><center><img src="images/seal.gif" width="75%" hight="75%"><center></ul>
+    <br><ul><center><img src="images/seal.jpg" width="75%" hight="75%"><center></ul>
   </div>
 
 
