--- a/IDP/hESC_long_read_file_guide.html
+++ b/IDP/hESC_long_read_file_guide.html
@@ -149,7 +149,7 @@
 
 
 
-    <br><ul><center><img src="images/seal.gif" width="75%" hight="75%"><center></ul>
+    <br><ul><center><img src="images/seal.jpg" width="75%" hight="75%"><center></ul>
   </div>
 
 
