--- a/IDP-ASE/IDP-ASE-contact.html
+++ b/IDP-ASE/IDP-ASE-contact.html
@@ -80,7 +80,7 @@
     </p>
     
     <h3><img src="images/dna.png"> Authors</h3>
-    IDP-ASE is developed by the <a href="http://www-stage.healthcare.uiowa.edu/labs/au/">Kin Fai Au Lab</a>. 
+    IDP-ASE is developed by the <a href="http://www.augroup.org/">Kin Fai Au Lab</a>. 
   </div>
   
   
