--- a/IDP-ASE/IDP-ASE-download-current.html
+++ b/IDP-ASE/IDP-ASE-download-current.html
@@ -161,7 +161,7 @@
     </ul>
 
 
-    <br><ul><center><img src="images/seal.gif" width="75%" hight="75%"><center></ul>
+    <br><ul><center><img src="images/seal.jpg" width="75%" hight="75%"><center></ul>
   </div>
 
 
