--- a/IDP-fusion/IDP-fusion.html
+++ b/IDP-fusion/IDP-fusion.html
@@ -27,7 +27,7 @@
 <div id="top_navbar">
   <!-- OPTIONAL TOP NAVIGATION OR TEXT AREA INSIDE RED BAR; BAR EXPANDS HEIGHT AUTOMATICALLY TO ACCOMMODATE CONTENT -->
    <ul>
-    <li>IDP-fusion IS DEVELOPED BY <a href="http://www.healthcare.uiowa.edu/labs/au/">KIN FAI AU</a> with help from collaborators</li>
+    <li>IDP-fusion IS DEVELOPED BY <a href="http://www.augroup.org/">KIN FAI AU</a> with help from collaborators</li>
   </ul>
   <!-- END OF OPTIONAL TOP RED BAR CONTENT -->
 </div>
@@ -96,7 +96,7 @@
 	<div id="SpliceMap-LSC-IDP-fusion pipeline">
     <h2>IDP-fusion pipeline</h2>
     </div>
-    <p>This fusion-transcriptome is identified by the<a href="http://www.stanford.edu/group/wonglab/SpliceMap/">SpliceMap</a>-<a href="http://www.healthcare.uiowa.edu/labs/au/LSC/">LSC</a>-<a href="http://www.healthcare.uiowa.edu/labs/au/IDP-fusion/">IDP-fusion</a> pipeline.</p>
+    <p>This fusion-transcriptome is identified by the<a href="http://www.stanford.edu/group/wonglab/SpliceMap/">SpliceMap</a>-<a href="http://www.augroup.org/LSC/LSC/">LSC</a>-<a href="http://www.augroup.org/IDP-fusion/IDP-fusion/">IDP-fusion</a> pipeline.</p>
 	<p>SpliceMap takes short reads from the Second Generation Sequencing platforms, such as Illumina, to detect exon junctions.</p>
 	<p>LSC makes use of the high-quality short reads to correct the long reads from PacBio platform. The output is the error-corrected long reads.</p>
 	<p>IDP-fusion uses the junction detections and the alignment of error-corrected long reads to detect the relatively short isoforms and fusion isforms at full-length and predict the very long isoforms and fusion isoforms by statistical modeling. </p>
@@ -150,57 +150,55 @@
 
         <h2>Useful links</h2>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/">Au Lab</a> - Au Lab homepage </li>
+      <li><a href="http://www.augroup.org">Au Lab</a> - Au Lab homepage </li>
     </ul>
     <ul>
       <li><a href="http://www.stanford.edu/group/wonglab/SpliceMap/">SpliceMap</a> - Novel splice junction discovery</li>
     </ul>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/LSC/">LSC</a> - Error correction of PacBio long reads </li>
+      <li><a href="http://www.augroup.org/LSC/LSC">LSC</a> - Error correction of PacBio long reads </li>
     </ul>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/IDP/">IDP</a> - Isoform Detection and Prediction  </li>
+      <li><a href="http://www.augroup.org/IDP/IDP">IDP</a> - Isoform Detection and Prediction  </li>
     </ul>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/IDP-ASE/">IDP-ASE</a> - Determine haplotypes and quantify allele specific expression  </li>
+      <li><a href="http://www.augroup.org/IDP-ASE/IDP-ASE">IDP-ASE</a> - Determine haplotypes and quantify allele specific expression  </li>
     </ul>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/IDP-fusion/">IDP-Fusion</a> - Isoform Detection and Prediction across fusion genes  </li>
+      <li><a href="http://www.augroup.org/IDP-fusion/IDP-fusion">IDP-Fusion</a> - Isoform Detection and Prediction across fusion genes  </li>
     </ul>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/IDP/hESC.html">hESC transcriptome</a> - hESC transcriptome by IDP </li>
+      <li><a href="http://www.augroup.org/IDP/hESC.html">hESC transcriptome</a> - hESC transcriptome by IDP </li>
     </ul>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/AlignQC/">AlignQC</a> - Check an alignment, assess error patterns, and make reports </li>
+      <li><a href="http://www.augroup.org/AlignQC/alignqc">AlignQC</a> - Check an alignment, assess error patterns, and make reports </li>
     </ul>
-   
+	
+<ul>
+      <li><a href="http://www.augroup.org/IDP-denovo.20160829/idp-denovo">IDP-denovo</a> - <i>de novo</i> transcriptome assembly and annotation</li>
+    </ul>
+
 
 <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/IDP-denovo/">IDP-denovo</a> - <i>de novo</i> transcriptome assembly and annotation</li>
+      <li><a href="http://www.augroup.org/GenoClone/GenoClone/GenoClone">GenoClone</a> - Reveal tumor heterogeneity</li>
     </ul>
-
-
-<ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/GenoClone/">GenoClone</a> - Reveal tumor heterogeneity</li>
-    </ul>
-
+	
 
  <ul>
       <li><a href="https://github.com/jason-weirather/Au-public">Au lab scripts</a> - Public repository of Au lab scripts and utilities </li>
     </ul>
 
 
-    <br><ul><center><img src="images/seal.gif" width="75%" hight="75%"><center></ul>
+    <br><ul><center><img src="images/seal.jpq" width="75%" hight="75%"><center></ul>
   </div>
 
 
 
 
-
-<div id="footer">
+</div><div id="footer">
     <ul>
-      <li>&copy; <a href=" http://www.healthcare.uiowa.edu/labs/au/">Kin Fai Au</a>.  All Rights Reserved.</li>
-      <li><a href=" http://www.uiowa.edu/">University of Iowa</a>, IA 52242.</li>
+      <li>&copy; <a href=" http://www.augroup.org">Kin Fai Au</a>. All Rights Reserved.</li>
+      <li><a href="https://www.osu.edu/">The Ohio State University</a>, OH 43210.</li>
     </ul>
 </div>
   
