--- a/LSC/LSC.html
+++ b/LSC/LSC.html
@@ -151,7 +151,7 @@
 	</p>
 	<p>
 	In LSC 1.alpha, we apply probabilistic algorithm ("SCD" option) to select ""enough" short read alignment for error correction.
-	LSC 1.alpha does NOT sacrifice the error correction performace (sensitivity and specificity). Please see <a href="http://www.healthcare.uiowa.edu/labs/au/LSC/LSC_manual.html#aligner">http://www.healthcare.uiowa.edu/labs/au/LSC/LSC_manual.html#aligner</a>
+	LSC 1.alpha does NOT sacrifice the error correction performace (sensitivity and specificity). Please see <a href="http://www.augroup.org/LSC/LSC_manual.html#aligner">http://www.augroup.org/LSC/LSC_manual.html#aligner</a>
 	Thus, we save running time and memory usage significantly.
 	<b>The running time is 30-50% of LSC 0.3.1. The peak memory usage decreases to ~10G regardless of the data size.</b>
 	</p>
@@ -181,7 +181,7 @@
 	
     </ul>
 	<p>
-	If you want to see the manual and tutorial of the old LSC (before 1.alpha), we keep the links of its the <a href="LSC_manual_0.3.1.asp"> Old manual</a> and <a href="LSC_tutorial_0.3.1.asp">Old tutorial</a> in the right side bar.
+	If you want to see the manual and tutorial of the old LSC (before 1.alpha), we keep the links of its the <a href="LSC_manual_0.3.1.html"> Old manual</a> and <a href="LSC_tutorial_0.3.1.html">Old tutorial</a> in the right side bar.
 	</p>
 	
     <div id="0.3.1">
@@ -321,7 +321,7 @@
 	
 	<p>
    <h3><img src="images/dna.png"> 02-06-2013: a bin path bug is fixed in LSC 0.2.2</h3>
-   If you run LSC at the bin folder (the bin folder is the work directory) or set the bin as the default path, then you may meet this bug. LSC 0.2.3 fixes this bug of finding the correct bin folder. You can download the <a href="LSC_download.asp">LSC 0.2.3</a> <br>
+   If you run LSC at the bin folder (the bin folder is the work directory) or set the bin as the default path, then you may meet this bug. LSC 0.2.3 fixes this bug of finding the correct bin folder. You can download the <a href="LSC_download.html">LSC 0.2.3</a> <br>
     </p>
 	
 	<p>
@@ -380,7 +380,7 @@ If you need to run LSC 0.2 now, please add novoalign in your default path and ch
     <li>Reduced redundant temp files</li>
     </ul>
     <p>
-      For detailed information about this release, please see the <a href="LSC_download.asp">release notes</a>.
+      For detailed information about this release, please see the <a href="LSC_download.html">release notes</a>.
    </p>
    
   </div>
@@ -388,60 +388,60 @@ If you need to run LSC 0.2 now, please add novoalign in your default path and ch
     <h2>Site Map</h2>
     <ul>
       <li><a href="default.asp">Home</a></li>
-      <li><a href="LSC_howitworks.asp">How it works?</a></li>
-      <li><a href="LSC_download.asp">Downloads</a></li>
-      <li><a href="LSC_contact.asp">Contact</a></li>
-      <li><a href="LSC_requirements.asp">Requirements</a></li>
+      <li><a href="LSC_howitworks.html">How it works?</a></li>
+      <li><a href="LSC_download.html">Downloads</a></li>
+      <li><a href="LSC_contact.html">Contact</a></li>
+      <li><a href="LSC_requirements.html">Requirements</a></li>
       <li><a href="https://github.com/jason-weirather/LSC/">Code</></li>
   
     </ul>
     <h3>Help</h3>
     <ul>
-      <li><a href="LSC_tutorial.asp">Tutorial</a></li>
-      <li><a href="LSC_manual.asp">Manual</a></li>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/utility_script.asp">Utilities</a></li>
-      <li><a href="LSC_faq.asp">FAQ</a></li>
+      <li><a href="LSC_tutorial.html">Tutorial</a></li>
+      <li><a href="LSC_manual.html">Manual</a></li>
+      <li><a href="http://www.augroup.org/utility_script.html">Utilities</a></li>
+      <li><a href="LSC_faq.html">FAQ</a></li>
     </ul>
     <h2>Download</h2>
     <h3>Current release</h3>
     <ul>
-      <li><a href="LSC_download.asp"><img src="images/download.png"> LSC 2.0</a> (<a href="LSC_download.asp#2.0">notes</a>)</li>
+      <li><a href="LSC_download.html"><img src="images/download.png"> LSC 2.0</a> (<a href="LSC_download.html#2.0">notes</a>)</li>
     </ul>
 
         <h2>Useful links</h2>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/">Au Lab</a> - Au Lab homepage </li>
+      <li><a href="http://www.augroup.org">Au Lab</a> - Au Lab homepage </li>
     </ul>
     <ul>
       <li><a href="http://www.stanford.edu/group/wonglab/SpliceMap/">SpliceMap</a> - Novel splice junction discovery</li>
     </ul>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/LSC/">LSC</a> - Error correction of PacBio long reads </li>
+      <li><a href="http://www.augroup.org/LSC/LSC">LSC</a> - Error correction of PacBio long reads </li>
     </ul>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/IDP/">IDP</a> - Isoform Detection and Prediction  </li>
+      <li><a href="http://www.augroup.org/IDP/IDP">IDP</a> - Isoform Detection and Prediction  </li>
     </ul>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/IDP-ASE/">IDP-ASE</a> - Determine haplotypes and quantify allele specific expression  </li>
+      <li><a href="http://www.augroup.org/IDP-ASE/IDP-ASE">IDP-ASE</a> - Determine haplotypes and quantify allele specific expression  </li>
     </ul>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/IDP-fusion/">IDP-Fusion</a> - Isoform Detection and Prediction across fusion genes  </li>
+      <li><a href="http://www.augroup.org/IDP-fusion/IDP-fusion">IDP-Fusion</a> - Isoform Detection and Prediction across fusion genes  </li>
     </ul>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/IDP/hESC.asp">hESC transcriptome</a> - hESC transcriptome by IDP </li>
+      <li><a href="http://www.augroup.org/IDP/hESC.html">hESC transcriptome</a> - hESC transcriptome by IDP </li>
     </ul>
     <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/AlignQC/">AlignQC</a> - Check an alignment, assess error patterns, and make reports </li>
+      <li><a href="http://www.augroup.org/AlignQC/alignqc">AlignQC</a> - Check an alignment, assess error patterns, and make reports </li>
     </ul>
    
 
 <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/IDP-denovo/">IDP-denovo</a> - <i>de novo</i> transcriptome assembly and annotation</li>
+      <li><a href="http://www.augroup.org/IDP-denovo.20160829/idp-denovo">IDP-denovo</a> - <i>de novo</i> transcriptome assembly and annotation</li>
     </ul>
 
 
 <ul>
-      <li><a href="http://www.healthcare.uiowa.edu/labs/au/GenoClone/">GenoClone</a> - Reveal tumor heterogeneity</li>
+      <li><a href="http://www.augroup.org/GenoClone/GenoClone/GenoClone">GenoClone</a> - Reveal tumor heterogeneity</li>
     </ul>
 
 
@@ -450,7 +450,7 @@ If you need to run LSC 0.2 now, please add novoalign in your default path and ch
     </ul>
 
 
-    <br><ul><center><img src="images/seal.gif" width="75%" hight="75%"><center></ul>
+    <br><ul><center><img src="images/seal.jpg" width="75%" hight="75%"><center></ul>
   </div>
 <div id="footer">
     <ul>
