--- a/LSC/LSC.html
+++ b/LSC/LSC.html
@@ -74,10 +74,10 @@
     <h2>Getting Started</h2>
     <p>These simple steps will help you integrate LSC into your transcriptomics analysis pipeline. </p>
     <ul>
-        <li>Read the <a href="LSC_requirements.asp">LSC_requirements</a> for running LSC. </li>
-        <li><a href="LSC_download.asp">Download</a> and set-up the LSC package. </li>
-        <li>Follow the <a href="LSC_tutorial.asp">tutorial</a> to see how LSC works on some example data. </li>
-        <li>Read the <a href="LSC_manual.asp">manual</a> if anything is unclear. </li>
+        <li>Read the <a href="LSC_requirements.html">LSC_requirements</a> for running LSC. </li>
+        <li><a href="LSC_download.html">Download</a> and set-up the LSC package. </li>
+        <li>Follow the <a href="LSC_tutorial.html">tutorial</a> to see how LSC works on some example data. </li>
+        <li>Read the <a href="LSC_manual.html">manual</a> if anything is unclear. </li>
         <li>You're ready, Happy LSCing!</li>
 
     </ul>
@@ -393,8 +393,8 @@ If you need to run LSC 0.2 now, please add novoalign in your default path and ch
       <li><a href="LSC_contact.html">Contact</a></li>
       <li><a href="LSC_requirements.html">Requirements</a></li>
       <li><a href="https://github.com/jason-weirather/LSC/">Code</></li>
-  
     </ul>
+	 
     <h3>Help</h3>
     <ul>
       <li><a href="LSC_tutorial.html">Tutorial</a></li>
