--- a/LSC/LSC_tutorial.html
+++ b/LSC/LSC_tutorial.html
@@ -721,7 +721,10 @@ ul
 	font-size:10.0pt;
 	font-family:"Times New Roman","serif";}
 </style>
-<![endif]--><!-- #include file ="asp\header.inc" --><!-- #include file ="asp\all_track.inc" --><!--[if gte mso 9]><xml>
+<![endif]-->
+	
+	
+	<!--[if gte mso 9]><xml>
  <o:shapedefaults v:ext="edit" spidmax="1026"/>
 </xml><![endif]--><!--[if gte mso 9]><xml>
  <o:shapelayout v:ext="edit">
@@ -767,7 +770,7 @@ is not necessary. If you desire a different python other than one located in
 /usr/bin/python you can execute LSC through your preferred python. Running the
 command with the -h option will give detailed descriptions of parameters. Be
 sure to have the bowtie2 aligner installed, as per <a
-href="LSC_requirements.asp">the requirements</a>.<o:p></o:p></span></p>
+href="LSC_requirements.html">the requirements</a>.<o:p></o:p></span></p>
 
 <blockquote style='margin-top:5.0pt;margin-bottom:5.0pt'><pre><span lang=EN
 style='mso-ansi-language:EN'><o:p>&nbsp;</o:p></span></pre><pre><span lang=EN
@@ -1117,7 +1120,7 @@ lang=EN style='mso-ansi-language:EN'><span style='mso-spacerun:yes'>&nbsp;&nbsp;
 <p style='tab-stops:45.8pt 91.6pt 137.4pt 183.2pt 229.0pt 274.8pt 320.6pt 366.4pt 412.2pt 458.0pt 503.8pt 549.6pt 595.4pt 641.2pt 687.0pt 732.8pt'><span
 lang=EN style='font-size:10.0pt;font-family:"Courier New";mso-ansi-language:
 EN'>The tutorial_output/ directory that <span class=GramE>is</span> created
-will contain the corrected long reads in the <a href="LSC_manual.asp#output">output
+will contain the corrected long reads in the <a href="LSC_manual.html#output">output
 format described in the manual</a>.<o:p></o:p></span></p>
 
 <pre><span lang=EN style='mso-ansi-language:EN'><o:p>&nbsp;</o:p></span></pre><pre><span
