--- a/IDP-fusion/IDP-fusion.html
+++ b/IDP-fusion/IDP-fusion.html
@@ -189,7 +189,7 @@
     </ul>
 
 
-    <br><ul><center><img src="images/seal.jpq" width="75%" hight="75%"><center></ul>
+    <br><ul><center><img src="images/seal.jpg" width="75%" hight="75%"><center></ul>
   </div>
 
 
