--- a/AlignQC/AlignQC_manual.html
+++ b/AlignQC/AlignQC_manual.html
@@ -86,15 +86,24 @@
     <h2>Site Map</h2>
     <ul>
       <li><a href="alignqc">Home</a></li>
-      
       <li><a href="AlignQC_download_current.html">Downloads</a></li>
       <li><a href="AlignQC_contact.html">Contact</a></li>
       <li><a href="AlignQC_requirements.html">Requirements</a></li>
-      
-  
+
+    </ul>
+    <h3>Help</h3>
+    <ul>
+
+      <li><a href="AlignQC_manual.html">Manual</a></li>
+
+    </ul>
+    <h2>Download</h2>
+    <h3>Current release</h3>
+    <ul>
+      <li><a href="AlignQC_download_current.html"><img src="images/download.png"> AlignQC 1.2</a> (<a href="AlignQC_download_current.html#notes">notes</a>)</li>
     </ul>
 
-<h2>Useful links</h2>
+    <h2>Useful links</h2>
     <ul>
       <li><a href="http://www.augroup.org">Au Lab</a> - Au Lab homepage </li>
     </ul>
