--- a/GenoClone/GenoClone/GenoClone.html
+++ b/GenoClone/GenoClone/GenoClone.html
@@ -101,7 +101,7 @@
 <div id="sidebar">
     <h2>Site Map</h2>
     <ul>
-      <li><a href="default.asp">Home</a></li>
+      <li><a href="default.html">Home</a></li>
       
       <li><a href="GenoClone_download_current.html">Downloads</a></li>
       <li><a href="GenoClone_contact.html">Contact</a></li>
