--- a/IDP-ASE/IDP-ASE-guide.html
+++ b/IDP-ASE/IDP-ASE-guide.html
@@ -104,7 +104,7 @@
     <h2>Download</h2>
     <h3>Current release</h3>
     <ul>
-      <li><a href="IDP-ASE_download_current.html"><img src="images/download.png"> IDP-ASE 20161017 </a> (<a href="IDP-ASE_download_current.asp#notes">notes</a>)</li>
+      <li><a href="IDP-ASE_download_current.html"><img src="images/download.png"> IDP-ASE 20161017 </a> (<a href="IDP-ASE_download_current.html#notes">notes</a>)</li>
     </ul>
 
         <h2>Useful links</h2>
