--- a/IDP-fusion/IDP-download-current.html
+++ b/IDP-fusion/IDP-download-current.html
@@ -114,7 +114,7 @@ STAR was throwing segmentation faults. This has been a continual problem with ST
 <div id="sidebar">
     <h2>Site Map</h2>
     <ul>
-      <li><a href="default.asp">Home</a></li>
+      <li><a href="IDP-fusion.html">Home</a></li>
       
       <li><a href="IDP-fusion_download_current.html">Downloads</a></li>
       <li><a href="IDP-fusion_contact.html">Contact</a></li>
@@ -183,7 +183,7 @@ STAR was throwing segmentation faults. This has been a continual problem with ST
     </ul>
 
 
-    <br><ul><center><img src="images/seal.jpq" width="75%" hight="75%"><center></ul>
+    <br><ul><center><img src="images/seal.jpg" width="75%" hight="75%"><center></ul>
   </div>
 
 </div><div id="footer">
