--- a/IDP-fusion/IDP-fusion_contact.html
+++ b/IDP-fusion/IDP-fusion_contact.html
@@ -93,7 +93,7 @@
 <div id="sidebar">
     <h2>Site Map</h2>
     <ul>
-      <li><a href="default.asp">Home</a></li>
+      <li><a href="IDP-fusion.html">Home</a></li>
       
       <li><a href="IDP-fusion_download_current.html">Downloads</a></li>
       <li><a href="IDP-fusion_contact.html">Contact</a></li>
