--- a/IDP-fusion/IDP-fusion_contact.html
+++ b/IDP-fusion/IDP-fusion_contact.html
@@ -58,7 +58,7 @@
 	</ul>
     </div>
 
-<p class="page_title_area_lower">Latest News:  IDP-fusion_20161024 is released <a href="default.asp#news">read more</a></p>
+<p class="page_title_area_lower">Latest News:  IDP-fusion_20161024 is released <a href="IDP-fusion.html#news">read more</a></p>
     
     
   </div>
