--- a/LSC/LSC_manual_1.x.html
+++ b/LSC/LSC_manual_1.x.html
@@ -189,7 +189,7 @@
 	  The quality (error rate) of corrected reads in corrected_LR.fq depends on its SR coverage and it uses Sanger standard encoding.
 	  <br><br>
 	  <table  border="1" bordercolor="#999999" cellspacing="0" cellpadding="3">
-	  <caption align="bottom" style="text-align: left">Reference: <a href="http://www.healthcare.uiowa.edu/labs/au/pubs/LSC.pdf">LSC paper</a>
+	  <caption align="bottom" style="text-align: left">Reference: <a href="http://www.augroup.org/LSC/LSC.pdf">LSC paper</a>
 	                                                   <br> * Error probablity is modeled with logarithmic funtion fitted to real data error-probabilities computed in the paper.</caption>
 	     <tr><td>SRs Coverage</td><td>Error Probability<sup>*</sup></td>
 		 <tr><td>0</td><td>0.275</td></tr>
