--- a/LSC/LSC_manual_0.3.1.html
+++ b/LSC/LSC_manual_0.3.1.html
@@ -278,7 +278,7 @@
  <div id="sidebar">
     <h2>Site Map</h2>
     <ul>
-      <li><a href="default.asp">Home</a></li>
+      <li><a href="LSC.html">Home</a></li>
       <li><a href="LSC_howitworks.html">How it works?</a></li>
       <li><a href="LSC_download.html">Downloads</a></li>
       <li><a href="LSC_contact.html">Contact</a></li>
