--- a/LSC/LSC_manual.html
+++ b/LSC/LSC_manual.html
@@ -89,7 +89,7 @@
     <div id="using">
     <h3><img src="images/dna.png">Using LSC</h3>
     </div>
-    <p>Firstly, see the <a href="LSC_tutorial.asp">tutorial</a> on how to use LSC on some example data.</p>
+    <p>Firstly, see the <a href="LSC_tutorial.html">tutorial</a> on how to use LSC on some example data.</p>
     <p>
     In order to use LSC on your own data, you will need to decide if doing a full run or a parallelized run would be more efficient.  If you are running a large data set (Tens of millions of short reads, and hundreds of thousands of long reads or bigger), we highly recommend doing a parallelized run.  A step by step guide for both normal and parallized execution can be found in the tutorial.  Too access the help regarding the command line options, you can used -h option with runLSC.py.
    
@@ -98,7 +98,7 @@
     <h3><img src="images/dna.png">Executing runLSC.py</h3>
     </div>
     <p>"runLSC.py" is the main program in the LSC package. Output is written to the "--output" folder. 
-    Details of the output files are described in <a href="LSC_manual.asp#fileformats">file formats</a>.
+    Details of the output files are described in <a href="LSC_manual.html#fileformats">file formats</a>.
     Its options are described here and can be accssed using the -h option when running runLSC.py:
     <blockquote>
     <pre>$ LSC-2.0/bin/runLSC.py -h</pre>
@@ -365,7 +365,7 @@ You may also execute LSC step-by-step.  To do this we must specify a temporary d
     </p>
 	<p>
     100,000 PacBio long reads X 64 million 75bp Illumina short reads 
-	    (<a href="LSC_manual.asp#Dataset">Dataset</a>)
+	    (<a href="LSC_manual.html#Dataset">Dataset</a>)
      </p>
 	<ul>
     <li>LSC 1.alpha (w/ bowtie2, SCD=20): Time = 09:40:33, Max vmem = 8.532G
@@ -379,7 +379,7 @@ You may also execute LSC step-by-step.  To do this we must specify a temporary d
    <div id="sidebar">
     <h2>Site Map</h2>
     <ul>
-      <li><a href="default.asp">Home</a></li>
+      <li><a href="LSC.html">Home</a></li>
       <li><a href="LSC_howitworks.html">How it works?</a></li>
       <li><a href="LSC_download.html">Downloads</a></li>
       <li><a href="LSC_contact.html">Contact</a></li>
