--- a/LSC/LSC_faq.html
+++ b/LSC/LSC_faq.html
@@ -102,7 +102,7 @@ In LSC 0.2.4, I corrected some bugs and output "new" results in the folder outpu
  <div id="sidebar">
     <h2>Site Map</h2>
     <ul>
-      <li><a href="default.asp">Home</a></li>
+      <li><a href="LSC.html">Home</a></li>
       <li><a href="LSC_howitworks.html">How it works?</a></li>
       <li><a href="LSC_download.html">Downloads</a></li>
       <li><a href="LSC_contact.html">Contact</a></li>
