--- a/LSC/LSC_cfg.html
+++ b/LSC/LSC_cfg.html
@@ -280,7 +280,7 @@ razers3_options = -i 92 -mr 0 -of sam
 <div id="sidebar">
     <h2>Site Map</h2>
     <ul>
-      <li><a href="default.asp">Home</a></li>
+      <li><a href="LSC.html">Home</a></li>
       <li><a href="LSC_howitworks.html">How it works?</a></li>
       <li><a href="LSC_download.html">Downloads</a></li>
       <li><a href="LSC_contact.html">Contact</a></li>
