--- a/LSC/LSC.html
+++ b/LSC/LSC.html
@@ -387,7 +387,7 @@ If you need to run LSC 0.2 now, please add novoalign in your default path and ch
  <div id="sidebar">
     <h2>Site Map</h2>
     <ul>
-      <li><a href="default.asp">Home</a></li>
+      <li><a href="LSC.html">Home</a></li>
       <li><a href="LSC_howitworks.html">How it works?</a></li>
       <li><a href="LSC_download.html">Downloads</a></li>
       <li><a href="LSC_contact.html">Contact</a></li>
