--- a/contact/contact.html
+++ b/contact/contact.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
-  <title>The Bioinformatics Lab @ The Ohio State University</title>
+  <title>The Statistical Bioinformatics Lab @ The Ohio State University</title>
   
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
