--- a/Publications/Publications.html
+++ b/Publications/Publications.html
@@ -293,7 +293,7 @@ D.K., <b>Au, K.F.</b>, Stoltz, <span class=GramE>D.A</span>. <br>
       <li><a href="http://www.augroup.org/IDP/IDP">IDP</a> - Isoform Detection and Prediction  </li>
     </ul>
     <ul>
-      <li><a href="http://www.augroup.org/IDP-ASE/idp-ase">IDP-ASE</a> - Determine haplotypes and quantify allele specific expression  </li>
+      <li><a href="http://www.augroup.org/IDP-ASE/IDP-ASE">IDP-ASE</a> - Determine haplotypes and quantify allele specific expression  </li>
     </ul>
     <ul>
       <li><a href="http://www.augroup.org/IDP-fusion/IDP-fusion">IDP-Fusion</a> - Isoform Detection and Prediction across fusion genes  </li>
