--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
     <br><a href="http://www.augroup.org/AlignQC/AlignQC_download_current.html"><img src="images/download.png"> AlignQC 1.2</a> (<a href="http://www.augroup.org/AlignQC/AlignQC_download_current.html#notes">notes</a>)</li>
     
 
-<li><a href="http://www.augroup.org/IDP-denovo/IDP-denovo_download_current.html">IDP-denovo</a> - <i>de novo</i> transcriptome assembly and annotation tool 
-    <br><a href="http://www.augroup.org/IDP-denovo/IDP-denovo_download_current.html"><img src="images/download.png"> IDP-denovo 0.2</a> (<a href="http://www.augroup.org/IDP-denovo/IDP-denovo_download_current.html#notes">notes</a>)</li>
+<li><a href="http://www.augroup.org/IDP-denovo.20160829/IDP-denovo_download_current.html">IDP-denovo</a> - <i>de novo</i> transcriptome assembly and annotation tool 
+    <br><a href="http://www.augroup.org/IDP-denovo.20160829/IDP-denovo_download_current.html"><img src="images/download.png"> IDP-denovo 0.2</a> (<a href="http://www.augroup.org/IDP-denovo.20160829/IDP-denovo_download_current.html#notes">notes</a>)</li>
 
 
 <li><a href="http://www.augroup.org/GenoClone/GenoClone/GenoClone">GenoClone</a> - Reveal tumor heterogeneity
