--- a/IDP/IDP_tutorial.html
+++ b/IDP/IDP_tutorial.html
@@ -71,16 +71,16 @@
     <h2>Tutorial</h2>
 
     <p>This tutorial will help you get started with IDP by demonstrating how to identify gene isoforms using PacBio long reads and short mappable short reads of length 50bp.  This tutorial will provide two options in data sets.  One full sized dataset, for executing a realistic run of the IDP pipeline, and a much smaller example if you want to quickly go through the steps and verify error-free execution.  If you experience any problems 
-    following these steps, please don't hesitate to <a href="IDP_contact.asp">contact</a> us. </p>
+    following these steps, please don't hesitate to <a href="IDP_contact.html">contact</a> us. </p>
 
     <h3>Requirements</h3>
-    <p>Please note the requiremed software and data files to run IDP (<a heref="http://www.augroup.org/IDP-fusion/IDP_requirements.html">requirements</a>).  For the purpose of the tutorial we will make the required files available to you.<br>
+    <p>Please note the requiremed software and data files to run IDP (<a heref="http://www.augroup.org/IDP/IDP_requirements.html">requirements</a>).  For the purpose of the tutorial we will make the required files available to you.<br>
     Please note when using your own data, that <font color="red">IDP does not use the output of IsoSeq as long read inputs</font>.  The prefered method used by IDP is to use the original long reads error corrcted when appropraite.  See <a href="http://www.augroup.org/IDP/IDP_long_read_file_guide.html">(long read generation)</a> for help.
     
     <h3><img src="images/dna.png">  <b>Step 1</b> - Download and extract the example files</h3>
     <p>You need to download:</p>
     <ul>
-   <a href="IDP_download_current.org"><img src="images/download.png"><b>The latest release of IDP</b></a><br>
+   <a href="IDP_download_current.html"><img src="images/download.png"><b>The latest release of IDP</b></a><br>
    <p>Uncompress and extract the directory in a location of your choice to get a directory containing IDP executable files.</p>
     <blockquote>
     <pre>
@@ -248,7 +248,7 @@
 <div id="sidebar">
     <h2>Site Map</h2>
     <ul>
-      <li><a href="default.asp">Home</a></li>
+      <li><a href="IDP.html">Home</a></li>
       
       <li><a href="IDP_download_current.html">Downloads</a></li>
       <li><a href="IDP_contact.html">Contact</a></li>
