--- a/IDP/IDP_long_read_file_guide.html
+++ b/IDP/IDP_long_read_file_guide.html
@@ -115,7 +115,7 @@
 <div id="sidebar">
     <h2>Site Map</h2>
     <ul>
-      <li><a href="default.asp">Home</a></li>
+      <li><a href="IDP.html">Home</a></li>
       <li><a href="IDP_howitworks.html">How it works?</a></li>
       <li><a href="IDP_download_current.html">Downloads</a></li>
       <li><a href="IDP_contact.html">Contact</a></li>
