--- a/IDP/IDP_tutorial.html
+++ b/IDP/IDP_tutorial.html
@@ -221,7 +221,7 @@
     All of the output from IDP is automatically copied to the "output" directory. After
     this execution, it should contain:
 
-    Each output file is descired on <a href="IDP_manual.html#output">maual page</a> in more details:
+    Each output file is descired on <a href="IDP_manual.html#output">manual page</a> in more details:
     <dl>
       <dt>&nbspisoform.gpd</dt>
       <dd>This file contains all gene isoforms identified from detection or prediction. There are overlap between detection and prediction, so isoform.gpd removes the redundant ones. 
