--- a/IDP/IDP_download_current.html
+++ b/IDP/IDP_download_current.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
@@ -14,10 +13,8 @@
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
   ga('create', 'UA-50750315-1', 'uiowa.edu');
   ga('send', 'pageview');
-
 </script>
 </head>
 
@@ -60,7 +57,7 @@
 	</ul>
     </div>
 
-<p class="page_title_area_lower">Latest News:  IDP 0.1.6 major update is released ... <a href="default.asp#news">read more</a></p>
+<p class="page_title_area_lower">Latest News:  IDP 0.1.6 major update is released ... <a href="IDP.html#news">read more</a></p>
     
     
   </div>
